--- a/Rapport 3/rapport3_elast_nichoka_newformating.tex
+++ b/Rapport 3/rapport3_elast_nichoka_newformating.tex
@@ -193,6 +193,8 @@
 
 \newpage
 \section{\label{sect:discussion}Discussion}
+
+Note STD.DEV of deflection increases with m (system is disturbed). Asume the disturbance is normally distributed, therefore error -> given by STD. DEV.
  
 \section{\label{sect:conclusion}Conclusion}
 
